SONAR-10138 Remove support for API < 5.6